Ajoute de page service

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
     <h3>Notre Vision</h3>
     <p>Former une nouvelle génération de développeurs capables de créer, innover et travailler en équipe grâce à des outils modernes comme Git et GitHub.</p>
   </section>
+  Page Service
   <footer>
     <p>© 2025 DevStart. Tous droits réservés.</p>
   </footer>
